number of birthday added and time of life lived too

--- a/vistas.html
+++ b/vistas.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-  <h1>Countdown a mi cumple</h1>
+  <h1>Countdown a mi cumple N° <span id="edad"></span></h1>
   <div class="countdown">
     <div class="countdown-item" id="days">00</div>
     <div class="countdown-item">:</div>
@@ -16,6 +16,17 @@
     <div class="countdown-item" id="seconds">00</div>
   </div>
 
-  <script src="script.js"></script>
+  <h1>Tiempo De vida:</h1>
+  <div class="countdown">
+    <div class="countdown-item" id="daysOfLife">00</div>
+    <div class="countdown-item">:</div>
+    <div class="countdown-item" id="hoursOfLife">00</div>
+    <div class="countdown-item">:</div>
+    <div class="countdown-item" id="minutesOfLife">00</div>
+    <div class="countdown-item">:</div>
+    <div class="countdown-item" id="secondsOfLife">00</div>
+  </div>
+
+  <script src="./script.js"></script>
 </body>
 </html>
