--- a/vistas.html
+++ b/vistas.html
@@ -16,7 +16,7 @@
     <div class="countdown-item" id="seconds">00</div>
   </div>
 
-  <h1>Tiempo De vida:</h1>
+  <h1>Tiempo de vida:</h1>
   <div class="countdown">
     <div class="countdown-item" id="daysOfLife">00</div>
     <div class="countdown-item">:</div>
@@ -27,6 +27,17 @@
     <div class="countdown-item" id="secondsOfLife">00</div>
   </div>
 
+
+  <h1>Tiempo transcurrido del año:</h1>
+  <div class="countdown">
+    <div class="countdown-item" id="daysOfYear">00</div>
+    <div class="countdown-item">:</div>
+    <div class="countdown-item" id="hoursOfYear">00</div>
+    <div class="countdown-item">:</div>
+    <div class="countdown-item" id="minutesOfYear">00</div>
+    <div class="countdown-item">:</div>
+    <div class="countdown-item" id="secondsOfYear">00</div>
+  </div>
   <script src="./script.js"></script>
 </body>
 </html>
